--- a/src/components/AtlasDemo/style.scss
+++ b/src/components/AtlasDemo/style.scss
@@ -3,7 +3,7 @@
 .AtlasDemo {
   position: relative;
   width: 100%;
-  padding: 3rem 0;
+  padding: 9.375rem 0;
   background-color: $c_black;
 
   &__background-left,
@@ -16,11 +16,12 @@
   }
 
   &__background-left {
-    left: 0;
+    top: 25rem;
+    right: calc(50% + 22rem);
   }
 
   &__background-right {
-    right: 0;
+    left: calc(50% + 20rem);
     margin: 0;
   }
 
@@ -34,22 +35,37 @@
 
   &__title {
     z-index: 1;
+    margin-bottom: -6rem;
     font-size: 2.5rem;
     color: $c_white;
     text-align: center;
     transition: opacity 1s;
+    transition-delay: .5s;
   }
 
   &__title--focused {
     opacity: 0;
+    transition-delay: 0s;
   }
 
-  &__try-out-button {
-    margin-top: 6rem;
+  @media #{$screen-max-lg} {
+    &__background-left {
+      top: 15rem;
+      right: calc(50% + 15rem);
+    }
+
+    &__background-right {
+      left: calc(50% + 12rem);
+      margin: 0;
+    }
   }
 
   @media #{$screen-max-md} {
-    padding: 0 0 3rem 0;
+    padding: 1rem 0 3rem 0;
+
+    &__title {
+      margin-bottom: 0;
+    }
 
     &__background-left,
     &__background-right {
@@ -62,7 +78,8 @@
     }
 
     &__try-out-button {
-      margin-top: 1rem;
+      width: 12rem;
+      height: 4rem;
     }
   }
 
