--- a/src/pages/founding-members/components/ScoringPeriod/style.scss
+++ b/src/pages/founding-members/components/ScoringPeriod/style.scss
@@ -40,6 +40,7 @@
         font-size: 14px;
         line-height: 20px;
         letter-spacing: -.4000000059604645px;
+        color: #dfe4ea;
       }
     }
 
@@ -58,16 +59,25 @@
       height: 214px;
       margin: auto 0 auto 32px;
       background-color: #322af1;
+
+      &__subtitle {
+        margin-bottom: 16px;
+        font-family: $font-secondary;
+        font-size: 14px;
+        line-height: 20px;
+        letter-spacing: -.4000000059604645px;
+        color: #dfe4ea;
+      }
     }
 
     &__percentage {
       width: 350px;
-      margin-top: 32px;
+      margin-top: 20px;
 
       &__line {
         width: 100%;
         height: 8px;
-        background-color: #322af1;
+        background-color: #4038ff;
       }
 
       &__filled {
@@ -117,6 +127,46 @@
     }
   }
 
+  &__counter {
+    display: flex;
+    flex-direction: row;
+
+    &__segment {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      width: 72px;
+      margin: 0 16px;
+    }
+
+    &__number {
+      margin-bottom: 6px;
+      font-family: $font-primary;
+      font-size: 56px;
+      font-weight: 700;
+      line-height: 62px;
+      letter-spacing: -2.4000000953674316px;
+      color: white;
+    }
+
+    &__label {
+      font-family: $font-secondary;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 20px;
+      letter-spacing: -.4000000059604645px;
+      color: #dfe4ea;
+    }
+
+    &__seperator {
+      font-size: 56px;
+      font-weight: 700;
+      line-height: 62px;
+      color: white;
+    }
+  }
+
   @media #{$screen-max-lg} {
     &__period {
       margin-top: 40px;
@@ -162,10 +212,14 @@
 
       &__percentage {
         width: 295px;
+
+        &__line {
+          background-color: #322af1;
+        }
       }
 
       &__buttons {
-        margin-top: 32px;
+        margin-top: 25px;
       }
     }
   }
