--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -16,10 +16,6 @@
     font-size: 32px;
     font-weight: 400;
     color: $c_white;
-
-    &--secondary {
-      display: block;
-    }
   }
 
   &__form-wrapper {
@@ -62,10 +58,6 @@
       width: 198px;
       margin: 0 10px;
       padding: 0;
-
-      &--secondary {
-        display: block;
-      }
     }
   }
 
@@ -80,10 +72,6 @@
     display: flex;
     flex-wrap: wrap;
     margin: 0 -10px;
-
-    &--secondary {
-      width: auto;
-    }
   }
 
   &__section {
@@ -117,34 +105,19 @@
 
   &__socials {
     display: flex;
-
-    &--secondary {
-      flex-direction: row;
-    }
+    flex-direction: row;
   }
 
   &__social-link {
+    display: flex;
+    flex-direction: row;
+    width: fit-content;
     margin-right: 24px;
-
-    &--secondary {
-      display: flex;
-      width: fit-content;
-      margin-bottom: 20px;
-    }
+    margin-bottom: 20px;
   }
 
   &__social-name {
     display: none;
-    margin-left: 12px;
-    font-family: $font-secondary;
-    font-size: 14px;
-    line-height: 20px;
-    letter-spacing: -.4000000059604645px;
-    color: #a7aeb7;
-
-    &:hover {
-      color: $c_white;
-    }
   }
 
   &__social-icon {
@@ -157,27 +130,16 @@
   }
 
   @media #{$screen-sm} {
-    padding: 90px 20px 40px;
-    background-image: url('../../assets/background/footer-left.png'), url('../../assets/background/footer-right.png');
-    background-position: top left, top right;
-    background-repeat: no-repeat;
-    background-size: auto 100%;
-
-    &--secondary {
-      padding: 90px 0 40px;
-      background-image: url('../../assets/background/footer-bottom-secondary.svg');
-      background-position: bottom left;
-      background-repeat: repeat-x;
-      background-size: auto 30px;
-    }
+    padding: 120px 0 100px;
+    background-image: url('../../assets/background/footer-bottom-secondary.svg');
+    background-position: bottom left;
+    background-repeat: repeat-x;
+    background-size: auto 30px;
 
     &__header {
+      display: none;
       margin-bottom: 80px;
       font-size: 40px;
-
-      &--secondary {
-        display: none;
-      }
     }
 
     &__form-wrapper {
@@ -185,24 +147,18 @@
     }
 
     &__button {
+      display: none;
       width: auto;
       margin-bottom: 120px;
-
-      &--secondary {
-        display: none;
-      }
     }
 
-    &__layout--secondary {
+    &__layout {
       width: 100%;
     }
 
     &__socials {
+      flex-direction: column;
       flex-wrap: nowrap;
-
-      &--secondary {
-        flex-direction: column;
-      }
     }
 
     &__section {
@@ -216,6 +172,16 @@
 
     &__social-name {
       display: block;
+      margin-left: 12px;
+      font-family: $font-secondary;
+      font-size: 14px;
+      line-height: 20px;
+      letter-spacing: -.4000000059604645px;
+      color: #a7aeb7;
+
+      &:hover {
+        color: $c_white;
+      }
     }
   }
 }
