First implementation of founding members form

--- a/src/pages/founding-members/components/ScoringPeriod/style.scss
+++ b/src/pages/founding-members/components/ScoringPeriod/style.scss
@@ -78,6 +78,10 @@
         width: 100%;
         height: 8px;
         background-color: #4038ff;
+
+        &--secondary {
+          background-color: $c_han-purple;
+        }
       }
 
       &__filled {
