First implementation of new navbar

--- a/src/components/Link/style.scss
+++ b/src/components/Link/style.scss
@@ -1,6 +1,7 @@
 @import '../../styles/main.scss';
 
 .Link {
+  position: relative;
   display: inline-flex;
   align-items: center;
   white-space: pre-wrap;
