Update content, make slight stylistic adjustments

--- a/src/components/FoundingMembersForm/style.scss
+++ b/src/components/FoundingMembersForm/style.scss
@@ -141,6 +141,7 @@
         padding: 20px 40px;
         overflow: hidden;
         background-color: white;
+        border-radius: 10px;
       }
 
       &__overlay {
