--- a/src/pages/founding-members/components/Benefits/style.scss
+++ b/src/pages/founding-members/components/Benefits/style.scss
@@ -46,8 +46,7 @@
         width: 700px;
         margin-left: 62px;
 
-        p:nth-child(1),
-        p:nth-child(3) {
+        p {
           margin-bottom: 16px;
           font-family: $font-secondary;
           font-size: 20px;
