--- a/src/pages/founding-members/style.scss
+++ b/src/pages/founding-members/style.scss
@@ -22,7 +22,7 @@
     }
 
     &__title {
-      margin-bottom: 8px;
+      margin-bottom: 20px;
       font-family: $font-primary;
       font-size: 60px;
       line-height: 68px;
@@ -69,7 +69,6 @@
     grid-template-columns: 1fr 1fr;
 
     &__title {
-      margin-bottom: 8px;
       font-family: $font-primary;
       font-size: 48px;
       line-height: 56px;
@@ -78,6 +77,7 @@
     }
 
     &__text {
+      margin-top: 16px;
       font-family: $font-secondary;
       font-size: 16px;
       line-height: 24px;
