--- a/src/components/FoundingMembersForm/style.scss
+++ b/src/components/FoundingMembersForm/style.scss
@@ -188,6 +188,7 @@
         font-size: 16px;
         line-height: 24px;
         letter-spacing: 0;
+        pointer-events: none;
       }
 
       &__label {
