--- a/src/pages/founding-members/components/Metrics/style.scss
+++ b/src/pages/founding-members/components/Metrics/style.scss
@@ -97,7 +97,7 @@
       height: 40px;
 
       &--founding {
-        grid-template-columns: 1.5fr 1fr 1fr;
+        grid-template-columns: 1.4fr 1.2fr .9fr;
       }
 
       &--nonfounding {
@@ -114,7 +114,7 @@
       background-color: white;
 
       &--founding {
-        grid-template-columns: 1.5fr 1fr 1fr;
+        grid-template-columns: 1.4fr 1.2fr .9fr;
       }
 
       &--nonfounding {
